--- a/mcop/app/src/main/AndroidManifest.xml
+++ b/mcop/app/src/main/AndroidManifest.xml
@@ -35,11 +35,12 @@
 
         <!-- ======== activity ========== -->
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.TermsActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -49,6 +50,11 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activities.InitializationActivity" />
+        <activity android:name=".activities.HomeActivity"/>
+        <activity android:name=".activities.AboutActivity"/>
+        <activity android:name=".activities.ApplistActivity"/>
 
         <!-- ======== receiver ========== -->
         <receiver android:name=".broadcastreceiver.IntenetReceiver">
