--- a/mcop/app/build.gradle
+++ b/mcop/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'com.google.code.gson:gson:2.3.+'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
     testCompile 'junit:junit:4.12'
 }
