--- a/mcop/app/src/main/AndroidManifest.xml
+++ b/mcop/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
 
         <!-- ======== activity ========== -->
         <activity
-            android:name=".activities.TermsActivity"
+            android:name=".activities.MainActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:launchMode="singleTask"
