--- a/mcop/app/src/main/AndroidManifest.xml
+++ b/mcop/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".MCOPApplication"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <intent-filter>
