--- a/mcop/app/build.gradle
+++ b/mcop/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.+'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.okhttp3:mockwebserver:3.6.0'
     testCompile 'junit:junit:4.12'
 }
 
