--- a/mcop/app/src/main/AndroidManifest.xml
+++ b/mcop/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS" />
 
     <application
         android:allowBackup="true"
@@ -57,6 +58,7 @@
         <activity android:name=".activities.AboutActivity"/>
         <activity android:name=".activities.ApplistActivity"/>
         <activity android:name=".activities.AppInfoActivity"/>
+        <activity android:name=".android.spy.ConfiguratingActivity" />
 
         <!-- ======== receiver ========== -->
         <receiver android:name=".broadcastreceiver.IntenetReceiver">
