--- a/mcop/app/build.gradle
+++ b/mcop/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "th.ac.bu.mcop"
         minSdkVersion 15
