--- a/mcop/app/src/main/AndroidManifest.xml
+++ b/mcop/app/src/main/AndroidManifest.xml
@@ -10,36 +10,53 @@
         android:smallScreens="true"
         android:xlargeScreens="true" />
 
-    <!-- ======== permission ========== -->
+    <!-- ======== common permission ========== -->
     <uses-permission
         android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+
+    <!-- calendar -->
+    <!--<uses-permission android:name="android.permission.READ_CALENDAR" />-->
+
+    <!-- contacts -->
+    <!--<uses-permission android:name="android.permission.READ_CONTACTS" />-->
+
+    <!-- location -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <!-- phone -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />-->
+
+    <!-- sms -->
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_SMS" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.WRITE_SMS"/>
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="com.android.email.permission.ACCESS_PROVIDER" />
-    <uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS" />
-    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <!--<uses-permission android:name="android.permission.WRITE_SMS"/>-->
+
+    <!-- camera -->
+    <!--<uses-permission android:name="android.permission.CAMERA" />-->
+
+    <!-- external storage -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!-- audio -->
+    <!--<uses-permission android:name="android.permission.RECORD_AUDIO" />-->
+
+    <!--<uses-permission android:name="com.android.email.permission.ACCESS_PROVIDER" />-->
+    <!--<uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS" />-->
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".MCOPApplication"
+        android:name="th.ac.bu.mcop.MCOPApplication"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <intent-filter>
