--- a/mcop/app/src/main/AndroidManifest.xml
+++ b/mcop/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:name="th.ac.bu.mcop.MCOPApplication"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/AppTheme.WithoutActionBar">
 
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
