--- a/mcop/app/src/main/AndroidManifest.xml
+++ b/mcop/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
     <!-- sms -->
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.WRITE_CALL_LOG"/>
+    <uses-permission android:name="android.permission.READ_CALL_LOG"/>
     <!--<uses-permission android:name="android.permission.WRITE_SMS"/>-->
 
     <!-- camera -->
